--- a/Clash/config/ACL4SSR_Online.ini
+++ b/Clash/config/ACL4SSR_Online.ini
@@ -57,9 +57,9 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=✈️ 手动选择`select`.*
 custom_proxy_group=🛩️ 手动选择备用`select`.*
 ; custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎓 网络安全`select`[]🚀 节点选择`[]✈️ 手动选择`[]🎯 全球直连`[]DIRECT.*
-custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]✈️ 手动选择`[]🎯 全球直连`[]DIRECT.*
-custom_proxy_group=🛸 IP归属地伪装`select`[]🚀 节点选择`[]✈️ 手动选择`[]🎯 全球直连`[]DIRECT.*
+custom_proxy_group=🎓 网络安全`select`[]🚀 节点选择`[]✈️ 手动选择`[]🛩️ 手动选择备用``[]🎯 全球直连`[]DIRECT.*
+custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]✈️ 手动选择`[]🛩️ 手动选择备用``[]🎯 全球直连`[]DIRECT.*
+custom_proxy_group=🛸 IP归属地伪装`select`[]🚀 节点选择`[]✈️ 手动选择`[]🛩️ 手动选择备用``[]🎯 全球直连`[]DIRECT.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
